--- a/locales/ar.json
+++ b/locales/ar.json
@@ -35,6 +35,7 @@
   },
 
   "common": {
+    "returnHome": "العودة للرئيسية",
     "required_info": "المدخلات المطلوبة",
     "price" : "السعر",
     "quantity" : "الكمية",
@@ -437,6 +438,7 @@
       "fillRequired" : "املأ الحقول المطلوبة"
     },
     "btn" :{
+      "whatsappProof": "إرسال الإثبات عبر واتساب",
       "buyNow": "شراء الآن",
       "orderWhatsApp" : "اطلب عبر واتساب",
           "buyTokens": "شراء توكنات",
@@ -464,5 +466,14 @@
     "privacy": "سياسة الخصوصية",
     "terms": "الشروط والأحكام",
     "rights": "جميع الحقوق محفوظة."
+  },
+  "success": {
+    "title": "تم استلام طلبك بنجاح!",
+    "orderRef": "رقم مرجع الطلب الخاص بك:",
+    "usdtTitle": "إكمال الدفع عبر USDT",
+    "usdtDesc": "يرجى تحويل المبلغ الإجمالي إلى عنوان محفظة TRC20 أدناه.",
+    "walletLabel": "عنوان USDT (TRC20)",
+    "transferTitle": "تحويل بنكي / ويسترن يونيون",
+    "transferDesc": "لقد تلقينا طلبك. يرجى التواصل معنا عبر واتساب للحصول على تفاصيل التحويل البنكي لإتمام عملية الدفع."
   }
 }
