* Translation updated * Header desktop and app header updated

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -25,9 +25,10 @@
   "tokens.bullets.4": "لا رسوم تجديد. التوكنات لا تنتهي صلاحيتها أبداً.",
   "tokens.bestValue": "أفضل قيمة",
   "tokens.buyNow": "شراء الآن",
-  "seo.title": "حاسبة كود PIN لمانع التشغيل — تحويل سريع من VIN إلى PIN وباقات توكن",
-  "seo.desc": "اشترِ التوكنات، وقم بإجراء استعلامات تحويل VIN إلى PIN، واصل إلى الحاسبات. خدمات كود PIN سريعة ومتوافقة مع SEO ونتائج فورية وبدون رسوم تجديد.",
-
+  "seo": {
+      "title": "حاسبة كود المفتاح (PIN) من الشاسيه | برمجة مفاتيح السيارات",
+      "desc": "احصل فوراً على كود المفتاح (Pincode) من رقم الشاسيه (VIN) لسيارات كيا، هيونداي، تويوتا والمزيد. خدمات برمجة مفاتيح احترافية وسريعة بدون اشتراكات."
+    },
   "home": {
     "categories": "الفئات",
     "tokenPacks": "باقات التوكن",
@@ -77,18 +78,20 @@
   },
 
   "nav": {
-    "tokens" : "التوكنات",
-    "calculators" : "الحاسبات",
-    "categories": "الفئات",
-    "lookups": "استعلاماتي",
-    "openMenu": "فتح القائمة",
-    "kia_before": "كيا / هيونداي VIN إلى PIN (قبل 2017)",
-    "kia_after": "كيا / هيونداي VIN إلى PIN (2017 وما بعد)",
-    "account": "الحساب",
-    "buyKiaOld": "توكنات كيا / هيونداي القديمة",
-    "buyKiaNew": "توكنات كيا / هيونداي الجديدة",
-    "calcKiaOld": "حاسبة كيا / هيونداي القديمة",
-    "calcKiaNew": "حاسبة كيا / هيونداي الجديدة"
+    "tokens" : "الرموز (Tokens)",
+      "calculators" : "الحاسبات",
+      "categories": "التصنيفات",
+      "lookups": "عمليات البحث",
+      "openMenu": "فتح القائمة",
+      "kia_before": "كيا / هيونداي VIN إلى PIN (قبل 2017)",
+      "kia_after": "كيا / هيونداي VIN إلى PIN (2017 وما بعد)",
+      "account": "حسابي",
+      "buyKiaOld": "رموز كيا / هيونداي القديمة",
+      "buyKiaNew": "رموز كيا / هيونداي الحديثة",
+      "buyToyota": "كود تويوتا / لكزس",
+      "buyChinese": "بين كود السيارات الصينية",
+      "calcKiaOld": "حاسبة كيا / هيونداي القديمة",
+      "calcKiaNew": "حاسبة كيا / هيونداي الحديثة"
   },
 
   "cart": {
@@ -174,6 +177,7 @@
   "tokens": "توكن",
 
   "auth": {
+    "welcome": "مرحبا",
     "logout" : "تسجيل الخروج",
     "account": "حسابك",
     "login": "تسجيل الدخول",
