Footer and home page updated

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,30 +1,34 @@
 {
-  "nav.kiaBefore2017": "كيا / هيونداي (قديم)",
+"nav.kiaBefore2017": "كيا / هيونداي (قديم)",
   "nav.kiaAfter2017": "كيا / هيونداي (جديد)",
-  "nav.categories": "الفئات",
-  "nav.lookups": "استعلاماتي",
-  "hero.badge": "حاسبة كود PIN لنظام مانع التشغيل",
-  "hero.headline": "لماذا تختار منصة أكواد PIN الخاصة بنا؟",
-  "hero.points.easy": "سهلة الاستخدام",
+  "nav.categories": "التصنيفات",
+  "nav.lookups": "سجل البحث",
+  "hero.badge": "حاسبة كود المفاتيح (Immobilizer)",
+  "hero.headline": "لماذا تختار منصتنا؟",
+  "hero.points.easy": "سهل الاستخدام",
   "hero.points.updates": "تحديثات مجانية مدى الحياة",
   "hero.points.free": "الوصول إلى خدمات مجانية",
-  "hero.points.noRenewal": "لا رسوم تجديد · التوكنات لا تنتهي صلاحيتها أبداً",
-  "hero.points.instant": "حساب فوري على مدار 24/7",
-  "btn.newLookup": "بحث جديد برقم الهيكل (VIN)",
-  "btn.buyTokens": "شراء توكنات",
+  "hero.points.noRenewal": "لا رسوم تجديد · التوكن لا ينتهي أبداً",
+
+  "hero.points.instant": "حساب فوري 24/7 (كيا / هيونداي)",
+  "hero.points.toyota": "رمز مرور تويوتا / لكزس",
+  "hero.points.chinese": "كود السيارات الصينية (إم جي - شانجان - شيري - هافال)",
+
+  "btn.newLookup": "بحث برقم الشاصي",
+  "btn.buyTokens": "شراء توكن",
   "section.offers.title": "عروض خاصة",
   "section.offers.subtitle": "خصومات إضافية وهدايا مجانية",
-  "section.calcs.title": "الحاسبات",
+  "section.calcs.title": "الآلات الحاسبة",
   "section.calcs.subtitle": "الخدمات الشائعة",
-  "section.calcs.browseAll": "تصفح جميع الحاسبات",
-  "section.tokens.title": "التوكنات",
-  "section.tokens.subtitle": "لماذا التوكنات؟",
-  "tokens.bullets.1": "تتطلب بعض الخدمات المتقدمة توكنات (مثل تحويل VIN إلى PIN لبعض العلامات التجارية).",
-  "tokens.bullets.2": "لا حاجة لدونجل (Dongle) أو برامج تشغيل.",
+  "section.calcs.browseAll": "تصفح جميع الخدمات",
+  "section.tokens.title": "التوكن",
+  "section.tokens.subtitle": "لماذا نحتاج التوكن؟",
+  "tokens.bullets.1": "بعض الخدمات المتقدمة تتطلب توكن (مثل VIN→PIN لبعض الماركات).",
+  "tokens.bullets.2": "لا حاجة لبرامج تشغيل أو قطع إضافية.",
   "tokens.bullets.3": "تسليم فوري عبر البريد الإلكتروني بعد الدفع.",
-  "tokens.bullets.4": "لا رسوم تجديد. التوكنات لا تنتهي صلاحيتها أبداً.",
+  "tokens.bullets.4": "لا رسوم تجديد. التوكن لا تنتهي صلاحيته.",
   "tokens.bestValue": "أفضل قيمة",
-  "tokens.buyNow": "شراء الآن",
+  "tokens.buyNow": "اشتر الآن",
   "seo": {
       "title": "حاسبة كود المفتاح (PIN) من الشاسيه | برمجة مفاتيح السيارات",
       "desc": "احصل فوراً على كود المفتاح (Pincode) من رقم الشاسيه (VIN) لسيارات كيا، هيونداي، تويوتا والمزيد. خدمات برمجة مفاتيح احترافية وسريعة بدون اشتراكات."
@@ -449,28 +453,26 @@
           "addToCart": "أضف إلى السلة"
     },
 
-    "footer": {
-    "questions": "هل لديك أسئلة؟ اتصل أو راسلنا عبر واتساب",
-    "contactInfo": "معلومات الاتصال",
-    "companyName": "خدمات 4Pincode",
-    "location": "الشارقة – الإمارات العربية المتحدة",
-    "quickLinks": "روابط سريعة",
-    "services": "الخدمات",
-    "support": "الدعم",
-    "home": "الرئيسية",
-    "newLookup": "بحث VIN جديد",
-    "buyTokens": "شراء توكنات",
-    "faq": "الأسئلة الشائعة",
-    "kiaOld": "كيا / هيونداي (قديم)",
-    "kiaNew": "كيا / هيونداي (جديد)",
-    "pricing": "خطط الأسعار",
-    "apiDocs": "وثائق API",
-    "contactUs": "اتصل بنا",
-    "aboutUs": "من نحن",
-    "privacy": "سياسة الخصوصية",
-    "terms": "الشروط والأحكام",
-    "rights": "جميع الحقوق محفوظة."
-  },
+  "footer": {
+      "questions": "لديك أسئلة؟ اتصل بنا أو راسلنا عبر واتساب",
+      "contactInfo": "معلومات الاتصال",
+      "companyName": "خدمات 4Pincode",
+      "location": "الشارقة – الإمارات العربية المتحدة",
+      "products": "المنتجات",
+      "calculators": "الآلات الحاسبة",
+      "support": "الدعم والمساعدة",
+      "home": "الرئيسية",
+      "kiaOld": "كيا / هيونداي (قديم)",
+      "kiaNew": "كيا / هيونداي (جديد)",
+      "toyota": "رمز مرور تويوتا / لكزس",
+      "chineseCars": "كود السيارات الصينية",
+      "contactUs": "اتصل بنا",
+      "aboutUs": "من نحن",
+      "privacy": "سياسة الخصوصية",
+      "terms": "الشروط والأحكام",
+      "faq": "الأسئلة الشائعة",
+      "rights": "جميع الحقوق محفوظة."
+    },
   "success": {
     "title": "تم استلام طلبك بنجاح!",
     "orderRef": "رقم مرجع الطلب الخاص بك:",
