contact us and privacy policy updated

--- a/locales/ar.json
+++ b/locales/ar.json
@@ -1,49 +1,95 @@
 {
-"nav.kiaBefore2017": "كيا / هيونداي (قديم)",
-  "nav.kiaAfter2017": "كيا / هيونداي (جديد)",
-  "nav.categories": "التصنيفات",
-  "nav.lookups": "سجل البحث",
-  "hero.badge": "حاسبة كود المفاتيح (Immobilizer)",
-  "hero.headline": "لماذا تختار منصتنا؟",
-  "hero.points.easy": "سهل الاستخدام",
-  "hero.points.updates": "تحديثات مجانية مدى الحياة",
-  "hero.points.free": "الوصول إلى خدمات مجانية",
-  "hero.points.noRenewal": "لا رسوم تجديد · التوكن لا ينتهي أبداً",
-
-  "hero.points.instant": "حساب فوري 24/7 (كيا / هيونداي)",
-  "hero.points.toyota": "رمز مرور تويوتا / لكزس",
-  "hero.points.chinese": "كود السيارات الصينية (إم جي - شانجان - شيري - هافال)",
-
-  "btn.newLookup": "بحث برقم الشاصي",
-  "btn.buyTokens": "شراء توكن",
-  "section.offers.title": "عروض خاصة",
-  "section.offers.subtitle": "خصومات إضافية وهدايا مجانية",
-  "section.calcs.title": "الآلات الحاسبة",
-  "section.calcs.subtitle": "الخدمات الشائعة",
-  "section.calcs.browseAll": "تصفح جميع الخدمات",
-  "section.tokens.title": "التوكن",
-  "section.tokens.subtitle": "لماذا نحتاج التوكن؟",
-  "tokens.bullets.1": "بعض الخدمات المتقدمة تتطلب توكن (مثل VIN→PIN لبعض الماركات).",
-  "tokens.bullets.2": "لا حاجة لبرامج تشغيل أو قطع إضافية.",
-  "tokens.bullets.3": "تسليم فوري عبر البريد الإلكتروني بعد الدفع.",
-  "tokens.bullets.4": "لا رسوم تجديد. التوكن لا تنتهي صلاحيته.",
-  "tokens.bestValue": "أفضل قيمة",
-  "tokens.buyNow": "اشتر الآن",
-  "seo": {
-      "title": "حاسبة كود المفتاح (PIN) من الشاسيه | برمجة مفاتيح السيارات",
-      "desc": "احصل فوراً على كود المفتاح (Pincode) من رقم الشاسيه (VIN) لسيارات كيا، هيونداي، تويوتا والمزيد. خدمات برمجة مفاتيح احترافية وسريعة بدون اشتراكات."
+  "nav": {
+    "kiaBefore2017": "كيا / هيونداي (قديم)",
+    "kiaAfter2017": "كيا / هيونداي (جديد)",
+    "categories": "التصنيفات",
+    "lookups": "سجل البحث",
+    "hero": {
+      "badge": "حاسبة كود المفاتيح (Immobilizer)",
+      "headline": "لماذا تختار منصتنا؟",
+      "points": {
+        "easy": "سهل الاستخدام",
+        "updates": "تحديثات مجانية مدى الحياة",
+        "free": "الوصول إلى خدمات مجانية",
+        "noRenewal": "لا رسوم تجديد · التوكن لا ينتهي أبداً",
+        "instant": "حساب فوري 24/7 (كيا / هيونداي)",
+        "toyota": "رمز مرور تويوتا / لكزس",
+        "chinese": "كود السيارات الصينية (إم جي - شانجان - شيري - هافال)"
+      }
     },
+    "tokens": "الرموز (Tokens)",
+    "calculators": "الحاسبات",
+    "openMenu": "فتح القائمة",
+    "kia_before": "كيا / هيونداي VIN إلى PIN (قبل 2017)",
+    "kia_after": "كيا / هيونداي VIN إلى PIN (2017 وما بعد)",
+    "account": "حسابي",
+    "buyKiaOld": "رموز كيا / هيونداي القديمة",
+    "buyKiaNew": "رموز كيا / هيونداي الحديثة",
+    "buyToyota": "كود تويوتا / لكزس",
+    "buyChinese": "بين كود السيارات الصينية",
+    "calcKiaOld": "حاسبة كيا / هيونداي القديمة",
+    "calcKiaNew": "حاسبة كيا / هيونداي الحديثة"
+  },
+  "hero": {
+    "badge": "حاسبة كود المفاتيح (Immobilizer)",
+    "headline": "لماذا تختار منصتنا؟",
+    "points": {
+      "easy": "سهل الاستخدام",
+      "updates": "تحديثات مجانية مدى الحياة",
+      "free": "الوصول إلى خدمات مجانية",
+      "noRenewal": "لا رسوم تجديد · التوكن لا ينتهي أبداً",
+      "instant": "حساب فوري 24/7 (كيا / هيونداي)",
+      "toyota": "رمز مرور تويوتا / لكزس",
+      "chinese": "كود السيارات الصينية (إم جي - شانجان - شيري - هافال)"
+    }
+  },
+  "btn": {
+    "newLookup": "بحث برقم الشاصي",
+    "buyTokens": "شراء توكن",
+    "whatsappProof": "إرسال الإثبات عبر واتساب",
+    "buyNow": "شراء الآن",
+    "orderWhatsApp": "اطلب عبر واتساب",
+    "addToCart": "أضف إلى السلة"
+  },
+  "section": {
+    "offers": {
+      "title": "عروض خاصة",
+      "subtitle": "خصومات إضافية وهدايا مجانية"
+    },
+    "calcs": {
+      "title": "الآلات الحاسبة",
+      "subtitle": "الخدمات الشائعة",
+      "browseAll": "تصفح جميع الخدمات"
+    },
+    "tokens": {
+      "title": "التوكن",
+      "subtitle": "لماذا نحتاج التوكن؟"
+    }
+  },
+  "tokens": {
+    "bullets": {
+      "1": "بعض الخدمات المتقدمة تتطلب توكن (مثل VIN→PIN لبعض الماركات).",
+      "2": "لا حاجة لبرامج تشغيل أو قطع إضافية.",
+      "3": "تسليم فوري عبر البريد الإلكتروني بعد الدفع.",
+      "4": "لا رسوم تجديد. التوكن لا تنتهي صلاحيته."
+    },
+    "bestValue": "أفضل قيمة",
+    "buyNow": "اشتر الآن"
+  },
+  "seo": {
+    "title": "حاسبة كود المفتاح (PIN) من الشاسيه | برمجة مفاتيح السيارات",
+    "desc": "احصل فوراً على كود المفتاح (Pincode) من رقم الشاسيه (VIN) لسيارات كيا، هيونداي، تويوتا والمزيد. خدمات برمجة مفاتيح احترافية وسريعة بدون اشتراكات."
+  },
   "home": {
     "categories": "الفئات",
     "tokenPacks": "باقات التوكن",
-    "supportedBrands" : "العلامات التجارية المدعومة"
+    "supportedBrands": "العلامات التجارية المدعومة"
   },
-
   "common": {
     "returnHome": "العودة للرئيسية",
     "required_info": "المدخلات المطلوبة",
-    "price" : "السعر",
-    "quantity" : "الكمية",
+    "price": "السعر",
+    "quantity": "الكمية",
     "save": "حفظ",
     "cancel": "إلغاء",
     "phone": "رقم الهاتف",
@@ -72,7 +118,6 @@
     "copied": "تم النسخ",
     "contact_whatsapp": "تواصل معنا عبر واتساب"
   },
-
   "product": {
     "category": "الفئة",
     "related": "منتجات ذات صلة",
@@ -80,24 +125,6 @@
     "details": "تفاصيل المنتج",
     "sku": "SKU"
   },
-
-  "nav": {
-    "tokens" : "الرموز (Tokens)",
-      "calculators" : "الحاسبات",
-      "categories": "التصنيفات",
-      "lookups": "عمليات البحث",
-      "openMenu": "فتح القائمة",
-      "kia_before": "كيا / هيونداي VIN إلى PIN (قبل 2017)",
-      "kia_after": "كيا / هيونداي VIN إلى PIN (2017 وما بعد)",
-      "account": "حسابي",
-      "buyKiaOld": "رموز كيا / هيونداي القديمة",
-      "buyKiaNew": "رموز كيا / هيونداي الحديثة",
-      "buyToyota": "كود تويوتا / لكزس",
-      "buyChinese": "بين كود السيارات الصينية",
-      "calcKiaOld": "حاسبة كيا / هيونداي القديمة",
-      "calcKiaNew": "حاسبة كيا / هيونداي الحديثة"
-  },
-
   "cart": {
     "loginToCheckout": "سجل الدخول لإتمام الطلب",
     "loginToCheckoutHint": "تحتاج إلى تسجيل الدخول لإكمال عملية الشراء.",
@@ -132,7 +159,6 @@
     "checkout": "متابعة الدفع",
     "loginSave": "لديك حساب؟ سجل الدخول لنتمكن من حفظ سلتك."
   },
-
   "checkout": {
     "copy": "نسخ",
     "copied": "تم النسخ",
@@ -174,15 +200,12 @@
     "successPaypal": "تم إنشاء فاتورة PayPal الخاصة بك. يرجى التحقق من بريدك الإلكتروني لإكمال الدفع.",
     "successUsdt": "تم إنشاء طلبك. يرجى إرسال تحويل USDT وإرسال إثبات الدفع لنا عبر واتساب.",
     "successTransfer": "تم إنشاء طلبك. يرجى إكمال التحويل الدولي. سنتصل بك بالتفاصيل.",
-    "acceptTermsPre" : "أوافق على الشروط والأحكام",
-    "acceptTermsLink" : "الشروط والأحكام"
+    "acceptTermsPre": "أوافق على الشروط والأحكام",
+    "acceptTermsLink": "الشروط والأحكام"
   },
-
-  "tokens": "توكن",
-
   "auth": {
     "welcome": "مرحبا",
-    "logout" : "تسجيل الخروج",
+    "logout": "تسجيل الخروج",
     "account": "حسابك",
     "login": "تسجيل الدخول",
     "register": "تسجيل جديد",
@@ -198,7 +221,6 @@
     "helloShort": "مرحباً {name}",
     "signedInAs": "مسجل الدخول باسم"
   },
-
   "shop": {
     "title": "المتجر",
     "all": "الكل",
@@ -207,7 +229,6 @@
     "tokens": "توكن",
     "pageOf": "صفحة {cur} من {total}"
   },
-
   "account": {
     "title": "حسابي",
     "tabs": {
@@ -252,7 +273,6 @@
       "vin": "رقم الهيكل (VIN)"
     }
   },
-
   "service": {
     "title": "الخدمة",
     "walletTokens": "التوكنات المتاحة",
@@ -269,8 +289,6 @@
     "resultTitle": "نتيجة فك التشفير",
     "vin_size": "يجب أن يتكون رقم الهيكل من 17 خانة بالضبط"
   },
-  
-
   "services": {
     "kiaBeforeTitle": "كيا / هيونداي القديمة (قبل 2017)",
     "kiaAfterTitle": "كيا / هيونداي (2017 وما بعد)"
@@ -288,7 +306,7 @@
         "name": "الاسم الكامل",
         "name_ph": "اسمك",
         "email": "عنوان البريد الإلكتروني",
-        "email_ph": "you@example.com",
+        "email_ph": "you{'@'}example.com",
         "subject": "الموضوع",
         "subject_ph": "عمّ تدور هذه الرسالة؟",
         "message": "الرسالة",
@@ -306,7 +324,6 @@
         "note": "لأعمال VIN العاجلة، واتساب هو أسرع وسيلة للوصول إلينا."
       }
     },
-
     "about": {
       "title": "من نحن",
       "subtitle": "خدمات احترافية لتحويل VIN إلى PIN لفنيي مفاتيح كيا وهيونداي حول العالم.",
@@ -333,7 +350,6 @@
         }
       }
     },
-
     "privacy": {
       "title": "سياسة الخصوصية",
       "subtitle": "بياناتك تهمنا. إليك كيف نجمعها ونحميها.",
@@ -360,7 +376,7 @@
         },
         "s5": {
           "title": "5. الاتصال",
-          "body": "إذا كان لديك أي أسئلة حول الخصوصية، اتصل بنا على support@pin-code.com."
+          "body": "إذا كان لديك أي أسئلة حول الخصوصية، اتصل بنا على support{'@'}pin-code.com."
         }
       }
     },
@@ -394,7 +410,7 @@
         }
       }
     },
-      "faq": {
+    "faq": {
       "contactSupport": "تواصل مع الدعم",
       "title": "الأسئلة الشائعة",
       "subtitle": "إجابات على الأسئلة الأكثر شيوعاً حول خدمات PIN لكيا / هيونداي.",
@@ -442,37 +458,29 @@
       }
     }
   },
-  "msg" :{
-      "fillRequired" : "املأ الحقول المطلوبة"
-    },
-    "btn" :{
-      "whatsappProof": "إرسال الإثبات عبر واتساب",
-      "buyNow": "شراء الآن",
-      "orderWhatsApp" : "اطلب عبر واتساب",
-          "buyTokens": "شراء توكنات",
-          "addToCart": "أضف إلى السلة"
-    },
-
+  "msg": {
+    "fillRequired": "املأ الحقول المطلوبة"
+  },
   "footer": {
-      "questions": "لديك أسئلة؟ اتصل بنا أو راسلنا عبر واتساب",
-      "contactInfo": "معلومات الاتصال",
-      "companyName": "خدمات 4Pincode",
-      "location": "الشارقة – الإمارات العربية المتحدة",
-      "products": "المنتجات",
-      "calculators": "الآلات الحاسبة",
-      "support": "الدعم والمساعدة",
-      "home": "الرئيسية",
-      "kiaOld": "كيا / هيونداي (قديم)",
-      "kiaNew": "كيا / هيونداي (جديد)",
-      "toyota": "رمز مرور تويوتا / لكزس",
-      "chineseCars": "كود السيارات الصينية",
-      "contactUs": "اتصل بنا",
-      "aboutUs": "من نحن",
-      "privacy": "سياسة الخصوصية",
-      "terms": "الشروط والأحكام",
-      "faq": "الأسئلة الشائعة",
-      "rights": "جميع الحقوق محفوظة."
-    },
+    "questions": "لديك أسئلة؟ اتصل بنا أو راسلنا عبر واتساب",
+    "contactInfo": "معلومات الاتصال",
+    "companyName": "خدمات 4Pincode",
+    "location": "الشارقة – الإمارات العربية المتحدة",
+    "products": "المنتجات",
+    "calculators": "الآلات الحاسبة",
+    "support": "الدعم والمساعدة",
+    "home": "الرئيسية",
+    "kiaOld": "كيا / هيونداي (قديم)",
+    "kiaNew": "كيا / هيونداي (جديد)",
+    "toyota": "رمز مرور تويوتا / لكزس",
+    "chineseCars": "كود السيارات الصينية",
+    "contactUs": "اتصل بنا",
+    "aboutUs": "من نحن",
+    "privacy": "سياسة الخصوصية",
+    "terms": "الشروط والأحكام",
+    "faq": "الأسئلة الشائعة",
+    "rights": "جميع الحقوق محفوظة."
+  },
   "success": {
     "title": "تم استلام طلبك بنجاح!",
     "orderRef": "رقم مرجع الطلب الخاص بك:",
